UI: Set fixed width of bottom nav items on mobile for clean symmetry

--- a/src/layouts/MainLayout/BottomNav.module.scss
+++ b/src/layouts/MainLayout/BottomNav.module.scss
@@ -43,7 +43,7 @@
 .navItem {
   position: relative;
   height: 46px;
-  padding: 0 $spacing-md;
+  width: 68px;
   border-radius: calc($radius-input - 4px);
   background: transparent;
   border: none;
